# aone

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/spikes/: gmail-oauth.md
evals/: intent_classification.jsonl
examples/: ask_about_invoices.py
src/aone/: __init__.py  cli.py  config.py  sync.py
src/aone/agent/: classify.py  execute.py  graph.py  intents.py  respond.py  select_tools.py  sender_match.py
src/aone/agent/tools/: amounts.py  contacts.py  search.py  summarize.py  thread.py
src/aone/gmail/: addresses.py  auth.py  client.py  demo.py  normalize.py  types.py
src/aone/llm/: client.py  embeddings.py
src/aone/observability/: tracing.py
src/aone/storage/: cache.py  vector.py
tests/: conftest.py  test_cli.py  test_config.py  test_sync.py
tests/agent/: test_classify.py  test_execute.py  test_graph.py  test_respond.py  test_select_tools.py  test_sender_match.py
tests/agent/tools/: test_amounts.py  test_contacts.py  test_search.py  test_summarize.py  test_thread.py
tests/gmail/: test_auth.py  test_client.py  test_normalize.py
tests/llm/: test_client.py  test_embeddings.py
tests/observability/: test_tracing.py
tests/storage/: test_cache.py  test_cache_stats.py  test_vector.py
