[project]
name = "aone"
version = "0.1.0"
description = "Agente conversacional de operaciones para freelancers y PYMES. Procesa correos de Gmail y responde preguntas de negocio en lenguaje natural desde la terminal."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Axel Chaves" }]
keywords = ["langgraph", "agents", "gmail", "claude", "groq", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.15",
]

[project.scripts]
aone = "aone.cli:app"

[project.urls]
Homepage = "https://github.com/Axelcv24/aone"
Repository = "https://github.com/Axelcv24/aone"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aone"]
