[project]
name = "aone"
version = "0.1.0"
description = "Conversational operations agent for freelancers and SMBs. Processes Gmail messages and answers business questions in natural language from the terminal."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Axel Chaves" }]
keywords = ["langgraph", "agents", "gmail", "claude", "groq", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "faiss-cpu>=1.14.2",
    "google-api-python-client>=2.196.0",
    "google-auth-oauthlib>=1.4.0",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "litellm>=1.86.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "typer>=0.15",
]

[project.scripts]
aone = "aone.cli:app"

[project.urls]
Homepage = "https://github.com/Axelcv24/aone"
Repository = "https://github.com/Axelcv24/aone"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aone"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that call real external services (e.g. Groq) — slower, may be skipped without an API key",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]
